# external-oaa-magento

./: .branch-exclude-main  .branch-exclude-qa  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  validation.sh
.github/workflows/: release.yml
backlog/: README.md
backlog/cloud-graphql/: .env.template  .gitignore  README.md  run.py
backlog/cloud-graphql/config/: settings.py
backlog/cloud-graphql/core/: __init__.py  application_builder.py  ims_auth.py  (+4 more)
backlog/cloud-rest/: .env.template  .gitignore  README.md  run.py
connectors/: README.md
connectors/on-prem-graphql/: .env.template  .gitignore  CE_VS_B2B.md  README.md  extract_ce.py  requirements.txt  run.py
connectors/on-prem-rest/: .env.template  .gitignore  README.md  requirements.txt  run.py
deployment/: README.md  activate.sh  create-orders.sh  debug-cart.sh  debug-order.sh  finish-magento-install.sh  fix-and-order.sh  main.tf  seed-orders.sh  seed-sample-data.sh  setup-insight-point.sh  setup-magento.sh  test-endpoints.sh
deployment/test/: run-extraction.sh  run_extraction.py  validate-instance.sh  validate_instance.py
reference/: README.md
reference/odie-oaa/: .env.template  .gitignore  README.md  requirements.txt  run.py
scripts/: promote.sh
shared/: README.md  pyproject.toml
shared/magento_oaa_shared/: __init__.py  application_builder_base.py  output_manager.py  permissions.py  preflight_checker.py  provider_registry.py  push_helper.py  veza_client.py
shared/tests/: test_application_builder_base.py  test_permissions.py  test_preflight_checker.py  test_push_helper.py
(+121 files in other folders)
