[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magento-oaa-shared"
version = "0.1.1"  # keep in sync with /VERSION
description = "Shared utilities for the Magento B2B data extractor"
requires-python = ">=3.9"
dependencies = [
    "oaaclient>=1.0.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["magento_oaa_shared*"]
